# kadron

./: .flake8  .gitignore  CONTRIBUTING.md  README.md  admin.py  alembic.ini  bot.py  bot_data.json  data_manager.py  db_manager.py  edit_question_plugin.py  example.env  getcode.py  group_event.py  main.py  plugin_manager.py  plugin_template.py  pyproject.toml  requirements.txt  requirents.txt  survey.py  view_surveys_plugin.py
core/: db_manager.py  models.py
docs/: specification.md
handlers/: admin_handlers.py  group_handlers.py  survey_handlers.py  view_surveys_handler.py
migrations/: env.py
plugins/: __init__.py  admin_menu_plugin.py  admin_plugin.py  anonymous.py  backup_plugin.py  captcha_plugin.py  edit_question_plugin.py  export_plugin.py  group_event.py  group_event_plugin.py  help_plugin.py  lang_plugin.py  multiple_choice_plugin.py  qtype_single.py  response_mixin.py  roles_plugin.py  schedule.py  scheduler_plugin.py  single_choice_plugin.py  storage_plugin.py  survey_plugin.py  survey_templates_plugin.py  test_mode_plugin.py  text_answer_plugin.py  utils_plugin.py  view_surveys_plugin.py
plugins_admin/: access_control_plugin.py  admin_menu_plugin.py  admin_plugin.py  analytics_plugin.py  captcha_plugin.py  group_event_plugin.py  notify_plugin.py  plugin_list_plugin.py  roles_plugin.py  scheduler_plugin.py  security_plugin.py  storage_plugin.py
plugins_surveys/: edit_question_plugin.py  export_plugin.py  multiple_choice_plugin.py  scheduler_plugin.py  single_choice_plugin.py  survey_plugin.py  survey_templates_plugin.py  test_mode_plugin.py  (+2 more)
(+51 files in other folders)
